make windows open in the right side

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,20 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+################
+### GENERAL ###
+################
+general {
+    layout = master
+}
+
+################
+###  MASTER  ###
+################
+
+master {
+    orientation = right        # Master pane on right
+}
 
 ################
 ### MONITORS ###
