--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 background_opacity 0.8
-
+blur_radius 10.0
+#font_size 13.0
 # Crimson Arch Theme for Kitty Terminal
 
 # Main colors
@@ -56,3 +57,6 @@ color14               #a85c5c
 # White
 color7                #d6a3a3
 color15               #e2bcbc
+
+# mappings
+map ctrl+shift+enter launch --cwd=current
