--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,9 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+$ZenActiveBd = rgba(7e9cd8ff)
+$ZenInactiveBd = rgba(545c7ecc)
+
 ################
 ### GENERAL ###
 ################
@@ -102,8 +105,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(a0393dff) rgba(3d1f1fff) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $ZenActiveBd
+    col.inactive_border = $ZenInactiveBd
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
