--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 ipc = true
 
-preload = /home/idan/Pictures/bg.png
-wallpaper = HDMI-A-1,/home/idan/Pictures/bg.png
+preload = /home/idan/Pictures/bg-gray.jpg
+wallpaper = HDMI-A-1,/home/idan/Pictures/bg-gray.jpg
 
