--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,20 +1,12 @@
 background_opacity 0.8
 blur_radius 10.0
 #font_size 13.0
-# Crimson Arch Theme for Kitty Terminal
 
 # Main colors
-foreground            #d6a3a3
+foreground            #bfbfbf
 background            #1a1a1a
 selection_foreground  #1a1a1a
-selection_background  #a0393d
-
-# Cursor colors
-cursor                #a0393d
-cursor_text_color     #1a1a1a
-
-# URL underline color when hovering
-url_color             #d6a3a3
+selection_background  #7a7a7a
 
 # Window border colors
 active_border_color   #a0393d
@@ -26,37 +18,22 @@ active_tab_background   #a0393d
 inactive_tab_foreground #d6a3a3
 inactive_tab_background #3d1f1f
 
-# Black
-color0                #2e2e2e
-color8                #4a4a4a
-
-# Red
-color1                #a0393d
-color9                #c75450
-
-# Green
-color2                #a05a5a
-color10               #b86767
-
-# Yellow
-color3                #bd6464
-color11               #d67e7e
-
-# Blue
-color4                #9c5353
-color12               #b46969
-
-# Magenta
-color5                #a0393d
-color13               #c75450
-
-# Cyan
-color6                #8c4545
-color14               #a85c5c
-
-# White
-color7                #d6a3a3
-color15               #e2bcbc
+color0     #252525
+color8     #555555
+color1     #be7472
+color9     #ff9900
+color2     #709772
+color10    #97bb98
+color3     #989772
+color11    #fefdbc
+color4     #7199bc
+color12    #9fbdde
+color5     #727399
+color13    #989abc
+color6     #719899
+color14    #6fbbbc
+color7     #7f7f7f
+color15    #feffff
 
 # mappings
 map ctrl+shift+enter launch --cwd=current
