--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,516 +1,149 @@
 {
-  // ─────────────────────────────────────────────────────────────┤ header ├───
-
-  "layer": "top",
-  "position": "top",
-  "mode": "dock",
-  "reload_style_on_change": true,
-  "gtk-layer-shell": true,
-
-  // ──────────────────────────────────────────────────────────┤ positions ├───
-
-  "modules-left": [
-    "custom/ws",            // window icon
-    "custom/left1",
-
-    "hyprland/workspaces",  // workspaces
-    "custom/right1",
-
-    "custom/paddw",
-    "hyprland/window"       // window title
-  ],
-
-  "modules-center": [
-    "custom/paddc",
-    "custom/left2",
-    "custom/temperature",   // temperature
-
-    "custom/left3",
-    "memory",               // memory
-
-    "custom/left4",
-    "cpu",                  // cpu
-    "custom/leftin1",
-
-    "custom/left5",
-    "custom/distro",        // distro icon
-    "custom/right2",
-
-    "custom/rightin1",
-    "idle_inhibitor",       // idle inhibitor
-    "clock#time",           // time
-    "custom/right3",
-
-    "clock#date",           // date
-    "custom/right4",
-
-    "custom/wifi",          // wi-fi
-    "bluetooth",            // bluetooth
-    "custom/update",        // system update
-    "custom/right5"
-  ],
-
-  "modules-right": [
-    "mpris",                // media info
-
-    "custom/left6",
-    "pulseaudio",           // output device
-
-    "custom/left7",
-    "backlight",            // brightness
-
-    "custom/left8",
-    "battery",              // battery
-
-    "custom/leftin2",
-    "custom/power"          // power button
-  ],
-
-  // ────────────────────────────────────────────────────────┤ window icon ├───
-
-  "custom/ws": {
-    "exec": "~/.config/waybar/scripts/current-theme.sh",
-    "return-type": "json",
-    "format": " 󰤕 ",
-    "on-click": "~/.config/waybar/scripts/theme-switcher.sh",
-    "min-length": 3,
-    "max-length": 3
-  },
-
-  // ─────────────────────────────────────────────────────────┤ workspaces ├───
-
-  "hyprland/workspaces": {
-    "on-scroll-up": "hyprctl dispatch workspace -1",
-    "on-scroll-down": "hyprctl dispatch workspace +1",
-    "persistent-workspaces": {
-      "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": []
-    }
-  },
-
-  // ─────────────────────────────────────────────────────────────┤ window ├───
-
-  "hyprland/window": {
-    "format": "{}",
-    "tooltip": false,
-    "min-length": 5,
-
-    "rewrite": {
-      // ────────────────────────────────────────────────────────── desktop ───
-      "": 
-        "<span foreground='#8caaee'> </span> Hyprland",
-
-      // ───────────────────────────────────────────────────────── terminal ───
-
-      "~": "  Terminal",
-      "zsh": "  Terminal",
-      "kitty": "  Terminal",
-
-      "tmux(.*)": 
-        "<span foreground='#a6d189'> </span> Tmux",
-
-      // ────────────────────────────────────────────────────────── browser ───
-
-      "(.*)Mozilla Firefox": 
-        "<span foreground='#e78284'>󰈹 </span> Firefox",
-      "(.*) — Mozilla Firefox": 
-        "<span foreground='#e78284'>󰈹 </span> $1",
-
-      "(.*)Zen Browser": 
-        "<span foreground='#ef9f76'>󰺕 </span> Zen Browser",
-      "(.*) — Zen Browser": 
-        "<span foreground='#ef9f76'>󰺕 </span> $1",
-
-      // ────────────────────────────────────────────────────── development ───
-
-      "(.*) - Visual Studio Code": 
-        "<span foreground='#8caaee'>󰨞 </span> $1",
-      "(.*)Visual Studio Code": 
-        "<span foreground='#8caaee'>󰨞 </span> Visual Studio Code",
-
-      "nvim": 
-        "<span foreground='#a6d189'> </span> Neovim",
-      "nvim (.*)": 
-        "<span foreground='#a6d189'> </span> $1",
-
-      "vim": 
-        "<span foreground='#a6d189'> </span> Vim",
-      "vim (.*)": 
-        "<span foreground='#a6d189'> </span> $1",
-
-      // ──────────────────────────────────────────────────────────── media ───
-
-      "(.*)Spotify": 
-        "<span foreground='#a6d189'> </span> Spotify",
-      "(.*)Spotify Premium": 
-        "<span foreground='#a6d189'> </span> Spotify Premium",
-
-      "OBS(.*)": 
-        "<span foreground='#a5adce'> </span> OBS Studio",
-
-      "VLC media player": 
-        "<span foreground='#ef9f76'>󰕼 </span> VLC Media Player",
-      "(.*) - VLC media player": 
-        "<span foreground='#ef9f76'>󰕼 </span> $1",
-
-      "(.*) - mpv": 
-        "<span foreground='#ca9ee6'> </span> $1",
-
-      "qView": "  qView",
-
-      "(.*).jpg": "  $1.jpg",
-      "(.*).png": "  $1.png",
-      "(.*).svg": "  $1.svg",
-
-      // ─────────────────────────────────────────────────────────── social ───
-
-      "• Discord(.*)": "Discord$1",
-      "(.*)Discord(.*)": 
-        "<span foreground='#8caaee'> </span> $1Discord$2",
-
-      "vesktop": 
-        "<span foreground='#8caaee'> </span> Discord",
-
-      // ──────────────────────────────────────────────────────── documents ───
-
-      "ONLYOFFICE Desktop Editors": 
-        "<span foreground='#e78284'> </span> OnlyOffice Desktop",
-
-      "(.*).docx": 
-        "<span foreground='#8caaee'> </span> $1.docx",
-      "(.*).xlsx": 
-        "<span foreground='#a6d189'> </span> $1.xlsx",
-      "(.*).pptx": 
-        "<span foreground='#ef9f76'> </span> $1.pptx",
-      "(.*).pdf": 
-        "<span foreground='#e78284'> </span> $1.pdf",
-
-      // ─────────────────────────────────────────────────────────── system ───
-      "Authenticate": "  Authenticate"
-    }
-  },
-
-  // ────────────────────────────────────────────────────────┤ temperature ├───
-
-  "custom/temperature": {
-    "exec": "~/.config/waybar/scripts/cpu-temp.sh",
-    "return-type": "json",
-    "format": "{}",
-    "interval": 5,
-    "min-length": 8,
-    "max-length": 8
-  },
-
-  // ─────────────────────────────────────────────────────────────┤ memory ├───
-
-  "memory": {
-    "states": {
-      "warning": 75,
-      "critical": 90
+    "layer": "top",
+    "height": 30,
+    "spacing": 4,
+    "reload_style_on_change": true,
+    "modules-left": [
+        "hyprland/workspaces",
+        "gamemode"
+    ],
+    "modules-center": [
+        "hyprland/window"
+    ],
+    "modules-right": [
+        "mpris",
+        "privacy",
+        "cpu",
+        "memory",
+        "custom/pipewire",
+        "clock",
+        "tray"
+    ],
+    "hyprland/workspaces": {
+        "format": "<span size='small' font='normal Font Awesome 6 Free'>{icon}</span>",
+        "on-click": "activate",
+        "sort-by-number": true,
+        "on-scroll-up": "hyprctl dispatch workspace e-1",
+        "on-scroll-down": "hyprctl dispatch workspace e+1",
+	"all-outputs": true
     },
-
-    "format": "󰘚 {percentage}%",
-    "format-critical": "󰀦 {percentage}%",
-    "tooltip": false,
-    // "tooltip-format": "Memory Used: {used:0.1f} GB / {total:0.1f} GB",
-    "interval": 5,
-    "min-length": 7,
-    "max-length": 7
-  },
-
-  // ────────────────────────────────────────────────────────────────┤ cpu ├───
-
-  "cpu": {
-    "format": "󰻠 {usage}%",
-    "tooltip": false,
-    "interval": 5,
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  // ─────────────────────────────────────────────────────────────┤ distro ├───
-
-  "custom/distro": {
-    "format": " ",
-    "tooltip": false
-  },
-
-  // ─────────────────────────────────────────────────────┤ idle inhibitor ├───
-
-  "idle_inhibitor": {
-    "format": "{icon}",
-
-    "format-icons": {
-      "activated": "󰈈 ",
-      "deactivated": "󰈉 "
+    "hyprland/window": {
+        "separate-outputs": true
     },
-
-    "tooltip-format-activated": "Presentation Mode",
-    "tooltip-format-deactivated": "Idle Mode",
-    "start-activated": false
-  },
-
-  // ───────────────────────────────────────────────────────────────┤ time ├───
-
-  "clock#time": {
-    "format": "{:%H:%M}",
-    "tooltip": false,
-    // "tooltip-format": "Standard Time: {:%I:%M %p}",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  // ───────────────────────────────────────────────────────────────┤ date ├───
-
-  "clock#date": {
-    "format": "󰨳 {:%m-%d}",
-    "tooltip-format": "<tt>{calendar}</tt>",
-
-    "calendar": {
-      "mode": "month",
-      "mode-mon-col": 6,
-      "on-click-right": "mode",
-
-      "format": {
-        "months": 
-          "<span color='#babbf1'><b>{}</b></span>",
-        "weekdays": 
-          "<span color='#a5adce' font='7'>{}</span>",
-        "today": 
-          "<span color='#e78284'><b>{}</b></span>"
+    "mpris": {
+        "format": "{player_icon}  {title} - {artist}",
+        "format-paused": "{status_icon}  {title} - {artist}",
+        "max-length": 50,
+        "dynamic-len": 10,
+        // only the strings that match "spotify" will appear
+        "player": "spotify", 
+        "on-scroll-up": "playerctl --player=spotify volume 0.05+",
+        "on-scroll-down": "playerctl --player=spotify volume 0.05-",
+        "player-icons": {
+            "default": "󰎈",
+            "mpv": "",
+            "vlc": "<span color='#E85E00'>󰕼</span>",
+            "spotify": "<span color='#1DB954'></span>",
+            "brave": "<span font='normal Font Awesome 6 Free' color='#ed7009'></span>"
+        },
+        "status-icons": {
+            "paused": "⏸",
+            "playing": "",
+            "stopped": ""
+        }
+    },
+    "gamemode": {
+        "format": "{glyph}",
+        "format-alt": "{glyph} {count}",
+        "glyph": "",
+        "hide-not-running": true,
+        "use-icon": true,
+        "icon-name": "input-gaming-symbolic",
+        "icon-spacing": 4,
+        "icon-size": 20,
+        "tooltip": true,
+        "tooltip-format": "Games running: {count}"
+    },
+    "privacy": {
+        "icon-spacing": 4,
+        "icon-size": 12,
+        "transition-duration": 250,
+        "modules": [
+            {
+                "type": "screenshare",
+                "tooltip": true,
+                "tooltip-icon-size": 12
+            },
+            {
+                "type": "audio-in",
+                "tooltip": true,
+                "tooltip-icon-size": 12
+            }
+        ]
+    },
+    "clock": {
+        "interval": 1,
+        "format": " {:%d.%m.%Y | %H:%M}  ",
+        "tooltip": false,
+        "tooltip-format": "<tt><small>{calendar}</small></tt>"
+    },
+    "tray": {
+        "icon-size": 15,
+        "spacing": 10
+    },
+    "cpu": {
+        "interval": 30,
+        "format": "  {load}%",
+        "max-length": 10
+    },
+    "memory": {
+        "interval": 30,
+        "format": "  {used:0.1f} GB"
+    },
+    "power-profiles-daemon": {
+      "format": "{icon}",
+      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+      "tooltip": true,
+      "format-icons": {
+        "default": "",
+        "performance": "",
+        "balanced": "",
+        "power-saver": ""
       }
     },
-
-    "actions": {
-      "on-click": "mode",
-      "on-click-right": "mode"
+    "pulseaudio": {
+        "format": "{icon} {volume}% {format_source}",
+        "format-bluetooth": "{volume}% {icon}",
+        "format-muted": "󰖁 0% {format_source}",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "󰂑",
+            "headset": "󰂑",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": [
+                "",
+                ""
+            ]
+        },
+        "scroll-step": 5,
+        "on-click": "pavucontrol",
+        "ignored-sinks": [
+            "Easy Effects Sink"
+        ],
+        "format-source": " {volume}%",
+        "format-source-muted": " {volume}%"
     },
-
-    "min-length": 8,
-    "max-length": 8
-  },
-
-  // ──────────────────────────────────────────────────────────────┤ wi-fi ├───
-
-  "custom/wifi": {
-    "exec": "~/.config/waybar/scripts/wifi-status.sh",
-    "return-type": "json",
-    "format": "{}",
-    "on-click": "~/.config/waybar/scripts/wifi-menu.sh",
-    "on-click-right": "kitty --title '󰤨  Network Manager TUI' bash -c nmtui",
-    "interval": 1,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  // ──────────────────────────────────────────────────────────┤ bluetooth ├───
-
-  "bluetooth": {
-    "format": "󰂰",
-    "format-disabled": "󰂲",
-    "format-connected": "󰂱",
-    "format-connected-battery": "󰂱",
-
-    "tooltip-format": 
-      "{num_connections} connected",
-    "tooltip-format-disabled": 
-      "Bluetooth Disabled",
-    "tooltip-format-connected": 
-      "{device_enumerate}",
-    "tooltip-format-enumerate-connected": 
-      "{device_alias}",
-    "tooltip-format-enumerate-connected-battery": 
-      ":: {device_alias}: 󱊣 {device_battery_percentage}%",
-
-    "on-click": "~/.config/waybar/scripts/bluetooth-menu.sh",
-    "on-click-right": "kitty --title '󰂯  Bluetooth TUI' bash -c bluetui",
-    "interval": 1,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  // ──────────────────────────────────────────────────────┤ system update ├───
-
-  "custom/update": {
-    "exec": "~/.config/waybar/scripts/system-update.sh",
-    "return-type": "json",
-    "format": "{}",
-    "on-click": "~/.config/waybar/scripts/system-update.sh up",
-    "interval": 30,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  // ─────────────────────────────────────────────────────────┤ media info ├───
-
-  "mpris": {
-    "format": "{player_icon} {title} - {artist}",
-    "format-paused": "{status_icon} {title} - {artist}",
-
-    "player-icons": {
-      "default": "󰝚 ",
-      "spotify": "<span foreground='#a6d189'>󰓇 </span>",
-      "firefox": "<span foreground='#e78284'>󰗃 </span>"
-    },
-    "status-icons": {
-      "paused": "<span color='#babbf1'>\u200A\u200A󰏤\u2009\u2009</span>"
-    },
-
-    "tooltip-format": "Playing: {title} - {artist}",
-    "tooltip-format-paused": "Paused: {title} - {artist}",
-    "min-length": 5,
-    "max-length": 35
-  },
-
-  // ──────────────────────────────────────────────────────┤ output device ├───
-
-  "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "format-muted": "󰝟 {volume}%",
-
-    "format-icons": {
-      "default": ["󰕿", "󰖀", "󰕾"],
-      "headphone": "󰋋",
-      "headset": "󰋋"
-    },
-
-    "tooltip-format": "Device: {desc}",
-    "on-click": "~/.config/waybar/scripts/volume-control.sh -o m",
-    "on-scroll-up": "~/.config/waybar/scripts/volume-control.sh -o i",
-    "on-scroll-down": "~/.config/waybar/scripts/volume-control.sh -o d",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  // ─────────────────────────────────────────────────────────┤ brightness ├───
-
-  "backlight": {
-    "format": "{icon} {percent}%",
-    "format-icons": ["", "", "", "", "", "", "", "", ""],
-    "tooltip": false,
-    "on-scroll-up": "~/.config/waybar/scripts/brightness-control.sh -o i",
-    "on-scroll-down": "~/.config/waybar/scripts/brightness-control.sh -o d",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  // ────────────────────────────────────────────────────────────┤ battery ├───
-
-  "battery": {
-    "states": {
-      "warning": 20,
-      "critical": 10
-    },
-
-    "format": "{icon} {capacity}%",
-    "format-icons": ["󰂎", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
-    "format-charging": " {capacity}%",
-
-    "tooltip-format": "Discharging: {time}",
-    "tooltip-format-charging": "Charging: {time}",
-    "interval": 1,
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  // ───────────────────────────────────────────────────────┤ power button ├───
-
-  "custom/power": {
-    "format": " ",
-    "tooltip": false,
-    // "tooltip-format": "Power Menu",
-    "on-click": "~/.config/waybar/scripts/power-menu.sh"
-  },
-
-  // ────────────────────────────────────────────────────────────┤ padding ├───
-
-  "custom/paddw": {
-    "format": " ",
-    "tooltip": false
-  },
-
-  "custom/paddc": {
-    "format": " ",
-    "tooltip": false
-  },
-
-  // ────────────────────────────────────────────────────────┤ left arrows ├───
-
-  "custom/left1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left2": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left3": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left4": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left5": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left6": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left7": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left8": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // ───────────────────────────────────────────────────────┤ right arrows ├───
-
-  "custom/right1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right2": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right3": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right4": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right5": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // ───────────────────────────────────────────────────────┤ left inverse ├───
-
-  "custom/leftin1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/leftin2": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // ──────────────────────────────────────────────────────┤ right inverse ├───
-
-  "custom/rightin1": {
-    "format": "",
-    "tooltip": false
-  }
+    "custom/pipewire": {
+        "format": "{icon}",
+        "return-type": "json",
+        "signal": 8,
+        "interval": "once",
+        "format-icons": {
+            "mute": "",
+            "default": ["", "", "", ""]
+        },
+        "exec": "pw-volume status"
+    }
 }
-
